# ai-guardrails

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
policies/: enterprise-default.yml  financial.yml  healthcare.yml  strict.yml
src/api/: __init__.py  main.py
src/cli/: __init__.py  main.py
src/guardrails/: __init__.py  engine.py  types.py
src/guardrails/classification/: __init__.py  language.py  sentiment.py  topic.py  toxicity.py
src/guardrails/injection/: __init__.py  analyzer.py  detector.py  patterns.py
src/guardrails/pii/: __init__.py  detector.py  ner_detector.py  patterns.py  presidio_detector.py  redactor.py  registry.py
src/guardrails/policy/: __init__.py  engine.py  loader.py  models.py
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/integration/: test_api.py  test_engine.py
tests/unit/: test_classification.py  test_injection.py  test_pii_detector.py  test_policy.py  test_redactor.py
