[tool.poetry]
name = "ai-guardrails"
version = "0.1.0"
description = "Production-grade AI safety and content guardrails library for enterprise applications"
authors = ["George Castillo <george@gcasti.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gcasti256/ai-guardrails"
repository = "https://github.com/gcasti256/ai-guardrails"
keywords = ["ai", "safety", "guardrails", "pii", "content-moderation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
packages = [{ include = "guardrails", from = "src" }, { include = "api", from = "src" }, { include = "cli", from = "src" }]

[tool.poetry.scripts]
guardrails = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6"
pyyaml = "^6.0"
spacy = "^3.7"
presidio-analyzer = "^2.2"
presidio-anonymizer = "^2.2"
fastapi = "^0.111"
uvicorn = { version = "^0.29", extras = ["standard"] }
typer = { version = "^0.12", extras = ["all"] }
langdetect = "^1.0.9"
structlog = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.27"
mypy = "^1.9"
ruff = "^0.3"
types-PyYAML = "^6.0"
pytest-benchmark = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PLC", "PLE", "PLR", "PLW", "TRY", "FLY", "PERF", "RUF"]
ignore = ["S101", "TRY003", "PLR0913", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]
